--- a/raspberrypi/webserver/static/style.css
+++ b/raspberrypi/webserver/static/style.css
@@ -70,6 +70,13 @@ animation: flash-red 2s infinite alternate;
 .node-current .nodeid {
 font-size: 120%;
 font-weight: bold;
+display: block;
+text-align: center;
+}
+
+.node-current .readingtime{
+font-size: 70%;
+font-style: italic;
 }
 
 .node-current .unit {
